--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
             <h3 class="name">My name is <span>Shrishtee Bajpai</span></h3>
             <p>I'm a web developer with a passion for front end development and design. I'm currently a third year student at
                                 <a href="https://www.srmist.edu.in/" target="_blank">SRM University</a> pursuing a degree in ELECTRONICS AND COMMUNICATION(ECE).I aspire toward a career towards computer science that's why I am learning new programming  Langauages  online.
-            I am also very intersted in data Anaylsis so working on projects related to it </p>.
+           With a CGPA of 9.66, I am a dedicated professional looking to make a meaningful impact in the fields of data visualization, frontend development, and core electronics.
+My passion lies in transforming complex data into visually compelling stories that drive understanding and inform decision-making. I have a keen eye for design and a deep understanding of user experience, allowing me to create interactive and engaging data visualizations using tools such as Tableau and JavaScript.
+In addition to data visualization, I also have a knack for frontend development. I am proficient in HTML5, CSS3, and JavaScript, and have experience in creating responsive and intuitive user interfaces. I thrive on crafting visually appealing websites and web applications that deliver seamless user experiences.
+Furthermore, my educational background in Electronics and Communication equips me with a solid foundation in core electronics. I have a strong understanding of circuit design, embedded systems, and programming languages like C. I enjoy working on projects that involve hardware development and have a passion for exploring the latest advancements in this field. </p>.
         </div>
 
         <div class="skills">
