--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ Furthermore, my educational background in Electronics and Communication equips m
             <div class="box">
                 <div class="year">2019-2023</div>
                 <h3>SRM UNIVERSITY KATTANKULANTHUR CHENNAI</h3>
-                                <p>1st YEAR  CGPA- 9.83</p>
-                				<p>2nd year SPGA-9.86</p>
+                                <p> CGPA- 9.83</p>
+                				
                 
             </div>
 
